Fix double space bug + invisible list styling due to tailwind defaults

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -427,3 +427,15 @@ html {
     scrollbar-color: #4C4E50;
   }
 }
+
+
+/* Restore List Styles */
+.tiptap ul,
+.tiptap ol {
+  list-style-type: disc; 
+  padding-left: 1.5rem;
+}
+
+.tiptap ol {
+  list-style-type: decimal;
+}
